@@ -50,6 +50,7 @@ Changes in 2.8
 - move tipmessage CSS (#Migoicons) & jscalendar stylesheet import from Warehouse.php to stylesheet.css
 - Add Admin checks for SetUserStaffID() & SetUserStudentID() functions in Current.php & Side.php
 - Save enrollment in Student.php & SaveEnrollment.fnc.php
+- prevent student ID hacking in Transcripts.php
 
 Upgrade from 2.7.x
 ------------------
